[gd_scene load_steps=2 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]

[node name="main" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="login" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 416.0
margin/top = 127.0
margin/right = 564.0
margin/bottom = 147.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Login using Facebook"
flat = false

[node name="user_name" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 415.0
margin/top = 167.0
margin/right = 564.0
margin/bottom = 181.0
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="info_dialog" type="AcceptDialog" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 335.0
margin/top = 95.0
margin/right = 619.0
margin/bottom = 270.0
popup/exclusive = false
window/title = "Alert!"
dialog/hide_on_ok = true

[node name="link" type="LinkButton" parent="info_dialog"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 10.0
margin/right = 274.0
margin/bottom = 59.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null

[node name="code" type="LineEdit" parent="info_dialog"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 105.0
margin/right = 213.0
margin/bottom = 129.0
placeholder/alpha = 0.6
align = 1
editable = false
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="copy" type="Button" parent="info_dialog"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 220.0
margin/top = 105.0
margin/right = 278.0
margin/bottom = 129.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Copy"
flat = false

[connection signal="pressed" from="login" to="." method="_on_login_pressed"]

[connection signal="confirmed" from="info_dialog" to="." method="_on_info_dialog_confirmed"]

[connection signal="pressed" from="info_dialog/link" to="." method="_on_link_pressed"]

[connection signal="pressed" from="info_dialog/copy" to="." method="_on_copy_pressed"]


